pandoc-fignos 1.3.0 (unreleased)

    * Require pandoc-xnos>=1.0.0,<2 to ensure API compatibility
      (Issue #46).


pandoc-fignos 1.2.0 (2018-01-14)

    * Added `fignos-capitalise` meta variable (pull request #44).


pandoc-fignos 1.1.0 (2018-01-13)

    * Update for compatibility with pandoc-xnos 0.15.


pandoc-fignos 1.0.0 (2018-01-07)

    * Version number bumped to 1.0.0.
    * Put span around html caption label (e.g., "Fig. 1") to
      allow styling.


pandoc-fignos 1.0.0rc3 (2017-12-16)

    * Fixed a corner case attributes processing bug (Issue #41).
    * Removed dependency on pandoc-attributes
      (pandoc-fignos Issue #42).


pandoc-fignos 1.0.0rc1 (2017-11-18)

    * Release candidate updated for pandoc 2.0.


pandoc-fignos 0.21.1 (2017-09-19)

    * Fixes for beamer (pandoc-fignos Issue #38).


pandoc-fignos 0.20.1 (2017-09-12)

    * Documentation updates.


pandoc-fignos 0.20 (2016-12-05)

    * Added numbering figures by section for html and pdf
      (pandoc-eqnos Issue #15).


pandoc-fignos 0.19 (2016-11-30)

    * Clickable internal links for docx (Issue #25).


pandoc-fignos 0.18.2 (2016-11-17)

    * Python 2.7.3 bug addressed with pandoc-xnos 0.7 (Issue #32).
    * Clarified purpose of this filter in README.md (Issue #31).


pandoc-fignos 0.18.1 (2016-11-06)

    * Fixed incorrect labelling of tagged figures.


pandoc-fignos 0.18 (2016-11-05).

    * Updated for pandoc 1.18 (Issue #30)


pandoc-fignos 0.17.1 (2016-10-22)

    * Fixed bug for filenames with spaces (Issue #23).
    * Fixed metadata corruption bug (Issue #23).
    * Fixed python 2.7 install on Windows (Issue #26).
    * Fixed cleveref bug for textless doc (Issue #27).
    * Require pandoc-xnos >= 0.5.


pandoc-fignos 0.15 (2016-08-21)

    * Support for unnumbered figures in TeX/pdf (Issue #15).
    * Removed anchors and ids in output for unreferenceable figures.


pandoc-fignos 0.14 (2016-05-18)

    * Added figure tags.