@@ -1,7 +1,9 @@
 pandoc-fignos 1.3.0 (unreleased)
 
-    * Require pandoc-xnos>=1.0.0,<2 to ensure API compatibility
+    * Require pandoc-xnos>=1.1,<2 to ensure API compatibility
       (Issue #46).
+    * Gives more helpful error message regarding acceptable
+      boolean metadata values (Issue #51).
 
 
 pandoc-fignos 1.2.0 (2018-01-14)
